test/scc/expr/semantic-errors/161.a
161.t:9:21: error: braces around scalar initializer